21/12/20 /MK Change - MenuUnit - DoFilter - If the filter is Bulls In Use and some bulls don't have breeds, show information message and sort by breed code.
                               - ClearAnimalSelection - If the sort was changed by the filter of Bulls In Use then set sort back to original sorted column.

Version V5.9 R7.9

22/12/20 /MK Change - uNutrientProductionProjectionRptScr - Changed Forage Area from Spin Edit to Current Edit so as not to show the spin buttons - GL request.
                                                          - Added a label under the Forecast Purchases & Sales to explain that movements are assumed to ocurr on the first date of the month - GL request.
Version V5.9 R7.8

04/12/20 /MK Change - uHerdSync - CreateHealthEvents - If multi treatment then save first event as dryoff and any following treatments as remedy events.
                                                     - Also change the comment of following treatments of dry off events to Remedy Event similar to non Dry Off Events.
                                                     - Set new DryOffSaved variable boolean to true if event is dry off and its the first treatment.
                                - AddEventToEventsExt - No need to check for EventId as we allow events to come in here that were not saved
                                                        because the animal doesn't exist in the database so push back the event as synced.
                    - uRemittance, DaZMisc - Added Jennings to the list of factories that a file can be requested from.   
15/12/20 /MK Change - GenTypesConst - Changed cUnitedDairiesURL URL as requested by George (TGM).
                    - uCallToExternalProgram - CallTeamViewer - Changed TeamViewer URL to look at new Kingswood log version of TeamViewer as TeamViewer9 is not supported.